tiller/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helm
    name: tiller
  name: tiller-deploy
  namespace: tiller
  annotations:
    flux.weave.works/automated: "false"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helm
      name: tiller
  template:
    metadata:
      labels:
        app: helm
        name: tiller
    spec:
      containers:
      - name: tiller
        image: gcr.io/kubernetes-helm/tiller:v2.16.4
        imagePullPolicy: IfNotPresent
        command:
        - /tiller
        - --storage=secret
        ports:
        - containerPort: 44134
          name: tiller
        - containerPort: 44135
          name: http
        livenessProbe:
          httpGet:
            path: /liveness
            port: 44135
          initialDelaySeconds: 10
        readinessProbe:
          httpGet:
            path: /readiness
            port: 44135
          initialDelaySeconds: 1
